--- a/foot.html
+++ b/foot.html
@@ -102,11 +102,11 @@
 							<li>乐优通信</li>
 						</ul>
 					</div>
-					<div class="yui3-u-1-6">
+					<!-- <div class="yui3-u-1-6">
 						<h4>帮助中心</h4>
 						<img src="img/wx_cz.jpg">
 					</div>
-				</div>
+				</div> -->
 			</div>
 			
 			
