--- a/getOrderInfo.html
+++ b/getOrderInfo.html
@@ -218,24 +218,24 @@
       addressList: [// 可选地址列表,假数据，需要从后台查询
         {
           id: 1,
-          addressee: "虎哥",// 收件人姓名
+          addressee: "ustc-青阳",// 收件人姓名
           phone: "15800000000",// 电话
-          province: "上海",// 省份
-          city: "上海",// 城市
-          district: "浦东新区",// 区
-          street: "航头镇航头路18号传智播客3号楼",// 街道地址
-          zipCode: "210000", // 邮编
+          province: "江苏省",// 省份
+          city: "苏州市",// 城市
+          district: "工业园区",// 区
+          street: "斜塘街道仁爱路188号",// 街道地址
+          zipCode: "215000", // 邮编
           isDefault: true
         },
         {
           id: 2,
-          addressee: "张三",// 收件人姓名
+          addressee: "ustc-青柏",// 收件人姓名
           phone: "13600000000",// 电话
-          province: "北京",// 省份
-          city: "北京",// 城市
-          district: "朝阳区",// 区
-          street: "天堂路 3号楼",// 街道地址
-          zipCode: "100000", // 邮编
+          province: "江苏省",// 省份
+          city: "苏州市",// 城市
+          district: "工业园区",// 区
+          street: "仁爱路188号",// 街道地址
+          zipCode: "215000", // 邮编
           isDefault: false
         }
       ],
