--- a/home-index.html
+++ b/home-index.html
@@ -122,10 +122,10 @@ $(function(){
                                     <tbody>
                                         <tr>
                                             <td width="35%">
-                                                <div class="typographic"><img src="img/goods.png" />
-                                                    <a href="#" class="block-text">包邮 正品玛姬儿压缩面膜无纺布纸膜100粒 送泡瓶面膜刷喷瓶 新款</a>
-                                                    <span class="guige">规格：温泉喷雾150ml</span>
-                                                </div>
+                                              <div class="typographic"><img src="img/goods.png" />
+                                                <a href="#" class="block-text">包邮 正品玛姬儿压缩面膜无纺布纸膜100粒 送泡瓶面膜刷喷瓶 新款</a>
+                                                <span class="guige">规格：温泉喷雾150ml</span>
+                                            </div>
                                             </td>
                                             <td width="5%" class="center">
                                                 <ul class="unstyled">
@@ -172,9 +172,9 @@ $(function(){
                                     <tbody>
                                         <tr>
                                             <td width="35%">
-                                                <div class="typographic"><img src="img/goods.png" />
-                                                    <a href="#" class="block-text">包邮 正品玛姬儿压缩面膜无纺布纸膜100粒 送泡瓶面膜刷喷瓶 新款</a>
-                                                    <span class="guige">规格：温泉喷雾150ml</span>
+                                                <div class="typographic"><img src="img/floor-1-1.png" style="width: 82px;height: 82px;"/>
+                                                    <a href="#" class="block-text">包邮 正品三星曲面电视 限时优惠：每满200-20，整机打9折 新款</a>
+                                                    <span class="guige">规格：65英寸</span>
                                                 </div>
                                             </td>
                                             <td width="5%" class="center">
@@ -211,9 +211,9 @@ $(function(){
                                         </tr>
                                         <tr>
                                             <td width="35%">
-                                                <div class="typographic"><img src="img/goods.png" />
-                                                    <a href="#" class="block-text">包邮 正品玛姬儿压缩面膜无纺布纸膜100粒 送泡瓶面膜刷喷瓶 新款</a>
-                                                    <span class="guige">规格：温泉喷雾150ml</span>
+                                                <div class="typographic"><img src="img/floor-1-2.png" style="width: 82px;height: 82px;" />
+                                                    <a href="#" class="block-text">包邮 美的烤箱 每满200-20，烘焙节一元即可抢购</a>
+                                                    <span class="guige">规格：22英寸</span>
                                                 </div>
                                             </td>
                                             <td width="5%" class="center">
@@ -247,9 +247,9 @@ $(function(){
                                     <tbody>
                                         <tr>
                                             <td width="35%">
-                                                <div class="typographic"><img src="img/goods.png" />
-                                                    <a href="#" class="block-text">包邮 正品玛姬儿压缩面膜无纺布纸膜100粒 送泡瓶面膜刷喷瓶 新款</a>
-                                                    <span class="guige">规格：温泉喷雾150ml</span>
+                                                <div class="typographic"><img src="img/floor-1-3.png" style="width: 82px;height: 82px;" />
+                                                    <a href="#" class="block-text">包邮 特价乐视电视 买乐视电视享巨惠，送60个月乐视会员</a>
+                                                    <span class="guige">规格：35英寸</span>
                                                 </div>
                                             </td>
                                             <td width="5%" class="center">
