--- a/home-order-receive.html
+++ b/home-order-receive.html
@@ -121,9 +121,9 @@ $(function(){
                                     <tbody>
                                         <tr>
                                             <td width="35%">
-                                                <div class="typographic"><img src="img/goods.png" />
-                                                    <a href="#" class="block-text">包邮 正品玛姬儿压缩面膜无纺布纸膜100粒 送泡瓶面膜刷喷瓶 新款</a>
-                                                    <span class="guige">规格：温泉喷雾150ml</span>
+                                                <div class="typographic"><img src="img/like2.png" style="width: 82px;height: 82px;"/>
+                                                    <a href="#" class="block-text">包邮 正品美的电饭锅 618期间限时3折，赶紧带回家吧 新款</a>
+                                                    <span class="guige">规格：25英寸</span>
                                                 </div>
                                             </td>
                                             <td width="5%" class="center">
