--- a/home-order-send.html
+++ b/home-order-send.html
@@ -120,9 +120,9 @@ $(function(){
                                     <tbody>
                                         <tr>
                                             <td width="35%">
-                                                <div class="typographic"><img src="img/goods.png" />
-                                                    <a href="#" class="block-text">包邮 正品玛姬儿压缩面膜无纺布纸膜100粒 送泡瓶面膜刷喷瓶 新款</a>
-                                                    <span class="guige">规格：温泉喷雾150ml</span>
+                                                <div class="typographic"><img src="img/today03.png" style="width: 82px;height:82px" />
+                                                    <a href="#" class="block-text">包邮 时尚穿搭，闪购低至3.6折 暑假出游季，赶快下手吧 新款</a>
+                                                    <span class="guige">规格：XL</span>
                                                 </div>
                                             </td>
                                             <td width="5%" class="center">
@@ -159,9 +159,9 @@ $(function(){
                                         </tr>
                                         <tr>
                                             <td width="35%">
-                                                <div class="typographic"><img src="img/goods.png" />
-                                                    <a href="#" class="block-text">包邮 正品玛姬儿压缩面膜无纺布纸膜100粒 送泡瓶面膜刷喷瓶 新款</a>
-                                                    <span class="guige">规格：温泉喷雾150ml</span>
+                                                <div class="typographic"><img src="img/today04.png" style="width: 82px;height:82px"/>
+                                                    <a href="#" class="block-text">包邮 0点上新，闪购低至1折，先到先得，赶快下单吧 新款</a>
+                                                    <span class="guige">规格：成人配带</span>
                                                 </div>
                                             </td>
                                             <td width="5%" class="center">
