--- a/home-orderDetail.html
+++ b/home-orderDetail.html
@@ -151,7 +151,7 @@ $(function(){
                         </div>
                         <div class="order-info">
                             <h5>订单信息</h5>
-                            <p>收货地址：神茶减肥茶就观察及噶盘滚啊  </p>
+                            <p>收货地址：苏州工业园区仁爱路188号思贤楼 </p>
                             <p>订单单号：178789758976986</p>
                             <p>下单时间：2017-06-04 09：03：03</p>
                             <p>支付时间：2017-06-05  09：03：03</p>
