--- a/home-person-collect.html
+++ b/home-person-collect.html
@@ -87,9 +87,48 @@ $(function(){
                                 <ul class="yui3-g"  id="goods-list">
                                     <li class="yui3-u-1-4">
                                         <div class="list-wrap">
-                                            <div class="p-img"><img src="img/_/t.jpg" alt=''></div>
+                                            <div class="p-img"><img src="https://bkimg.cdn.bcebos.com/pic/e1fe9925bc315c60ff369f8082b1cb134954773a?x-bce-process=image/resize,m_lfit,w_268,limit_1/format,f_jpg" alt=''></div>
                                             <div class="price"><strong><em>¥</em> <i>139.00</i></strong></div>
-                                            <div class="attr"><em>Apple苹果iPhone 6s 32G金色 移动联通电信4G手机</em></div>
+                                            <div class="attr"><em>apple 苹果8 限时大特价，赶快抢购把 移动联通电信4G手机</em></div>
+                                            <div class="cu"><em><span>促</span>满一件可参加超值换购</em></div>
+                                            <div class="operate">
+                                                <a href="success-cart.html" target="_blank" class="sui-btn btn-bordered btn-danger">加入购物车</a>
+                                                <a href="javascript:void(0);" class="sui-btn btn-bordered">对比</a>
+                                                <a href="javascript:void(0);" class="sui-btn btn-bordered">降价通知</a>
+                                            </div>
+                                        </div>
+                                    </li >
+                                      <li class="yui3-u-1-4">
+                                        <div class="list-wrap">
+                                            <div class="p-img"><img src="https://bkimg.cdn.bcebos.com/pic/0eb30f2442a7d933c89530b84201c61373f08302abef?x-bce-process=image/resize,m_lfit,w_235,h_235,limit_1/format,f_auto" alt=''></div>
+                                            <div class="price"><strong><em>¥</em> <i>139.00</i></strong></div>
+                                            <div class="attr"><em>xiaomi 小米11 最新发布新品，赶快抢购把 移动联通电信4G手机</em></div>
+                                            <div class="cu"><em><span>促</span>满一件可参加超值换购</em></div>
+                                            <div class="operate">
+                                                <a href="success-cart.html" target="_blank" class="sui-btn btn-bordered btn-danger">加入购物车</a>
+                                                <a href="javascript:void(0);" class="sui-btn btn-bordered">对比</a>
+                                                <a href="javascript:void(0);" class="sui-btn btn-bordered">降价通知</a>
+                                            </div>
+                                        </div>
+                                    </li >
+                                      <li class="yui3-u-1-4">
+                                        <div class="list-wrap">
+                                            <div class="p-img"><img src="https://bkimg.cdn.bcebos.com/pic/0df3d7ca7bcb0a46f21f75783429e1246b600c330115?x-bce-process=image/resize,m_lfit,w_235,h_235,limit_1/format,f_auto" alt=''></div>
+                                            <div class="price"><strong><em>¥</em> <i>139.00</i></strong></div>
+                                            <div class="attr"><em>Apple苹果iPhone12 128G金色 移动联通电信4G手机</em></div>
+                                            <div class="cu"><em><span>促</span>满一件可参加超值换购</em></div>
+                                            <div class="operate">
+                                                <a href="success-cart.html" target="_blank" class="sui-btn btn-bordered btn-danger">加入购物车</a>
+                                                <a href="javascript:void(0);" class="sui-btn btn-bordered">对比</a>
+                                                <a href="javascript:void(0);" class="sui-btn btn-bordered">降价通知</a>
+                                            </div>
+                                        </div>
+                                    </li >
+                                      <li class="yui3-u-1-4">
+                                        <div class="list-wrap">
+                                            <div class="p-img"><img src="https://bkimg.cdn.bcebos.com/pic/0eb30f2442a7d933c89544359607c61373f08202ab6b?x-bce-process=image/watermark,image_d2F0ZXIvYmFpa2UxMTY=,g_7,xp_5,yp_5/format,f_auto" alt=''></div>
+                                            <div class="price"><strong><em>¥</em> <i>139.00</i></strong></div>
+                                            <div class="attr"><em>Apple苹果iPhone X 32G金色 移动联通电信4G手机</em></div>
                                             <div class="cu"><em><span>促</span>满一件可参加超值换购</em></div>
                                             <div class="operate">
                                                 <a href="success-cart.html" target="_blank" class="sui-btn btn-bordered btn-danger">加入购物车</a>
@@ -102,7 +141,7 @@ $(function(){
                                         <div class="list-wrap">
                                             <div class="p-img"><img src="img/_/t.jpg" alt=''></div>
                                             <div class="price"><strong><em>¥</em> <i>139.00</i></strong></div>
-                                            <div class="attr"><em>Apple苹果iPhone 6s 32G金色 移动联通电信4G手机</em></div>
+                                            <div class="attr"><em>春夏季 女生外出短袖 青春唯美 赶快下手吧 先到先得</em></div>
                                             <div class="cu"><em><span>促</span>满一件可参加超值换购</em></div>
                                             <div class="operate">
                                                 <a href="success-cart.html" target="_blank" class="sui-btn btn-bordered btn-danger">加入购物车</a>
@@ -113,48 +152,9 @@ $(function(){
                                     </li >
                                       <li class="yui3-u-1-4">
                                         <div class="list-wrap">
-                                            <div class="p-img"><img src="img/_/t.jpg" alt=''></div>
+                                            <div class="p-img"><img src="https://bkimg.cdn.bcebos.com/pic/738b4710b912c8fcc3ce6474f54f8545d688d43f8b7c?x-bce-process=image/resize,m_lfit,w_220,limit_1/format,f_auto" alt=''></div>
                                             <div class="price"><strong><em>¥</em> <i>139.00</i></strong></div>
-                                            <div class="attr"><em>Apple苹果iPhone 6s 32G金色 移动联通电信4G手机</em></div>
-                                            <div class="cu"><em><span>促</span>满一件可参加超值换购</em></div>
-                                            <div class="operate">
-                                                <a href="success-cart.html" target="_blank" class="sui-btn btn-bordered btn-danger">加入购物车</a>
-                                                <a href="javascript:void(0);" class="sui-btn btn-bordered">对比</a>
-                                                <a href="javascript:void(0);" class="sui-btn btn-bordered">降价通知</a>
-                                            </div>
-                                        </div>
-                                    </li >
-                                      <li class="yui3-u-1-4">
-                                        <div class="list-wrap">
-                                            <div class="p-img"><img src="img/_/t.jpg" alt=''></div>
-                                            <div class="price"><strong><em>¥</em> <i>139.00</i></strong></div>
-                                            <div class="attr"><em>Apple苹果iPhone 6s 32G金色 移动联通电信4G手机</em></div>
-                                            <div class="cu"><em><span>促</span>满一件可参加超值换购</em></div>
-                                            <div class="operate">
-                                                <a href="success-cart.html" target="_blank" class="sui-btn btn-bordered btn-danger">加入购物车</a>
-                                                <a href="javascript:void(0);" class="sui-btn btn-bordered">对比</a>
-                                                <a href="javascript:void(0);" class="sui-btn btn-bordered">降价通知</a>
-                                            </div>
-                                        </div>
-                                    </li >
-                                      <li class="yui3-u-1-4">
-                                        <div class="list-wrap">
-                                            <div class="p-img"><img src="img/_/t.jpg" alt=''></div>
-                                            <div class="price"><strong><em>¥</em> <i>139.00</i></strong></div>
-                                            <div class="attr"><em>Apple苹果iPhone 6s 32G金色 移动联通电信4G手机</em></div>
-                                            <div class="cu"><em><span>促</span>满一件可参加超值换购</em></div>
-                                            <div class="operate">
-                                                <a href="success-cart.html" target="_blank" class="sui-btn btn-bordered btn-danger">加入购物车</a>
-                                                <a href="javascript:void(0);" class="sui-btn btn-bordered">对比</a>
-                                                <a href="javascript:void(0);" class="sui-btn btn-bordered">降价通知</a>
-                                            </div>
-                                        </div>
-                                    </li >
-                                      <li class="yui3-u-1-4">
-                                        <div class="list-wrap">
-                                            <div class="p-img"><img src="img/_/t.jpg" alt=''></div>
-                                            <div class="price"><strong><em>¥</em> <i>139.00</i></strong></div>
-                                            <div class="attr"><em>Apple苹果iPhone 6s 32G金色 移动联通电信4G手机</em></div>
+                                            <div class="attr"><em>Apple苹果iPhone 11 64G金色 移动联通电信4G手机</em></div>
                                             <div class="cu"><em><span>促</span>满一件可参加超值换购</em></div>
                                             <div class="operate">
                                                 <a href="success-cart.html" target="_blank" class="sui-btn btn-bordered btn-danger">加入购物车</a>
