--- a/home-setting-address.html
+++ b/home-setting-address.html
@@ -102,9 +102,9 @@ $(function(){
                                 </thead>
                                 <tbody>
                                     <tr>
-                                        <td>刘田田</td>
-                                        <td>北京 北京市 海淀区 上地街道东北旺西路8号中关村软件园9号楼</td>
-                                        <td>1774***********4</td>
+                                        <td>ustc-青阳</td>
+                                        <td>江苏省苏州市工业园区 斜塘街道 仁爱路188号 思贤楼</td>
+                                        <td>18660465582</td>
                                         <td>
                                             <a href="#">编辑</a>
                                             <a href="#">删除</a>
@@ -112,9 +112,9 @@ $(function(){
                                         </td>
                                     </tr>
                                     <tr>
-                                        <td>沈沉</td>
-                                        <td>北京 北京市 海淀区 上地街道东北旺西路8号中关村软件园9号楼</td>
-                                        <td>1774***********4</td>
+                                        <td>ustc-肖斯任</td>
+                                        <td>江苏省苏州市工业园区 斜塘街道 仁爱路188号 敏学楼</td>
+                                        <td>15467829076</td>
                                         <td>
                                             <a href="#">编辑</a>
                                             <a href="#">删除</a>
