--- a/item.html
+++ b/item.html
@@ -264,7 +264,26 @@
                 <li>
                   <div class="list-wrap">
                     <div class="p-img">
-                      <img src="/img/_/part01.png"/>
+                      <img style="width: 132px;height: 90px;" src="https://bkimg.cdn.bcebos.com/pic/e1fe9925bc315c60ff369f8082b1cb134954773a?x-bce-process=image/resize,m_lfit,w_268,limit_1/format,f_jpg"/>
+                    </div>
+                    <div class="attr">
+                      <em>Apple苹果iPhone 8s</em>
+                    </div>
+                    <div class="price">
+                      <strong>
+                        <em>¥</em>
+                        <i>5088.00</i>
+                      </strong>
+                    </div>
+                    <div class="operate">
+                      <a href="javascript:void(0);" class="sui-btn btn-bordered">加入购物车</a>
+                    </div>
+                  </div>
+                </li>
+                <li>
+                  <div class="list-wrap">
+                    <div class="p-img">
+                      <img src="img/_/list.jpg" style="width: 132px;height: 90px;"/>
                     </div>
                     <div class="attr">
                       <em>Apple苹果iPhone 6s (A1699)</em>
@@ -283,26 +302,7 @@
                 <li>
                   <div class="list-wrap">
                     <div class="p-img">
-                      <img src="/img/_/part02.png"/>
-                    </div>
-                    <div class="attr">
-                      <em>Apple苹果iPhone 6s (A1699)</em>
-                    </div>
-                    <div class="price">
-                      <strong>
-                        <em>¥</em>
-                        <i>6088.00</i>
-                      </strong>
-                    </div>
-                    <div class="operate">
-                      <a href="javascript:void(0);" class="sui-btn btn-bordered">加入购物车</a>
-                    </div>
-                  </div>
-                </li>
-                <li>
-                  <div class="list-wrap">
-                    <div class="p-img">
-                      <img src="/img/_/part03.png"/>
+                      <img style="width: 132px;height: 90px;" src="https://bkimg.cdn.bcebos.com/pic/0eb30f2442a7d933c89544359607c61373f08202ab6b?x-bce-process=image/resize,m_lfit,w_268,limit_1/format,f_jpg"/>
                     </div>
                     <div class="attr">
                       <em>Apple苹果iPhone 6s (A1699)</em>
